# salmon-fce-demo

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: api-deploy.yml  azure-static-web-apps-agreeable-flower-06d02721e.yml  azure-static-web-apps-wonderful-bush-05ac6bc00.yml  topup.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  security.py
backend/fce_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: project-boilerplate.md  project-scope.md
etl/: Dockerfile  fetch_weather.py  generate_synthetic.py  merge_and_load.py  seed.py  top_up.py
frontend/: .rebuild-1757387446  Dockerfile  index.html  package-lock.json  package.json  staticwebapp.config.json  vite.config.js
frontend/public/: _headers  staticwebapp.config.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: Charts.jsx
frontend/src/lib/: api.js  auth.js  auth.jsx
