[project]
name = "fce-backend"
version = "0.1.0"
description = "FastAPI backend for salmon FCE demo"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.114.0",
  "uvicorn[standard]>=0.30.0",
  "motor>=3.4.0",
  "pydantic>=2.8.2",
  "orjson>=3.9.15",
  # Auth libraries removed
  "structlog>=24.1.0",
  "pytest>=8.2.0",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

